# FASTAPILLM

./: .env.azure.example  .env.custom.example  .env.example  .env.openrouter.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_REVIEW_REPORT.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  FRAMEWORK_COMPARISON.md  LICENSE  PROVIDERS.md  QUICK_START.md  README.md  README_ALEMBIC.md  SEPARATION_GUIDE.md  TECHNICAL_ARCHITECTURE.md  TROUBLESHOOTING.md  UV_SETUP.md  __init__.py  alembic.ini  check-setup.py  config.py  current_packages.txt  custom_settings.py  custom_settings_example.py  database.py  debug_rate_limiting.py  dep.txt  dev-start.py  diagnose.py  docker-compose.separated.yml  docker-compose.yml  example_global_settings.py  example_service_usage.py  examples_custom_headers.py  fix_backend_imports.py  header_factory.py  logging_config.py  (+22 more)
.claude/: settings.local.json
.github/workflows/: test.yml
.kiro/specs/technical-architecture-document/: design.md  requirements.md  tasks.md
alembic/: env.py
archive/: 910c8a7b34fa_add_token_counting_fields.py  CHANGELOG.md  CONTRIBUTING.md  PROVIDERS.md  TROUBLESHOOTING.md  city.json  context_routes_simple.py  test_logging.py  test_startup.py
backend/: Dockerfile  MCP_EXTRACTION_SUMMARY.md  MCP_README.md  __init__.py  app_config.py  config.py  custom_settings.py  database.py  exceptions.py  logging_config.py  main.py  mcp_server.py  middleware.py  pricing.py  rate_limiting.py  retry_utils.py  simple_rate_limiting.py  test_mcp_client.py  transaction_context.py  validation.py
backend/prompts/: chat_prompts.py  langchain_prompts.py
backend/prompts/langchain/: README.md  langchain_user_prompt_template.txt
backend/prompts/langgraph/: README.md  langgraph_initial_story_template.txt
backend/prompts/semantic_kernel/: README.md  semantic_kernel_chat_system_prompt.txt  semantic_kernel_system_prompt.txt  semantic_kernel_user_message_template.txt
backend/routes/: log_routes.py  story_routes.py
backend/schemas/: __init__.py  chat.py  cost.py  story.py
backend/services/: SERVICE_ARCHITECTURE.md  __init__.py  base_ai_service.py  content_generation_service.py
backend/services/chat_services/: __init__.py  base_chat_service.py  langchain_chat_service.py  langgraph_chat_service.py
backend/services/context_services/: __init__.py  base_context_service.py  langgraph_context_service.py  semantic_kernel_context_service.py
backend/services/story_services/: langchain_service.py  langgraph_service.py  semantic_kernel_service.py
backend/utils/: file_processors.py
frontendReact/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  webpack.config.js
frontendReact/src/: App.tsx  index.css  webpack-env.d.ts
frontendReact/src/components/: Layout.tsx
frontendReact/src/hooks/: useApi.ts  useComponentLogger.ts
frontendReact/src/pages/: Chat.tsx  ContextManager.tsx  CostTracking.tsx  StoryGenerator.tsx  StoryHistory.tsx
frontendReact/src/prompts/: systemPrompt.txt  userPrompt.txt
frontendReact/src/services/: api.ts
frontendReact/src/types/: index.ts
frontendReact/src/utils/: dateUtils.ts  logger.ts  promptLoader.ts
prompts/: langgraph_prompts.py  prompt_utils.py  semantic_kernel_prompts.py
prompts/langchain/: langchain_chat_system_prompt.txt  langchain_system_prompt.txt
prompts/langgraph/: langgraph_chat_system_prompt.txt  langgraph_editor_system_prompt.txt  langgraph_enhancement_template.txt  langgraph_storyteller_system_prompt.txt
routes/: chat_routes.py  context_routes.py  cost_routes.py  story_routes.py
schemas/: chat.py  context.py  story.py
scripts/: view_logs.py
services/: __init__.py  base_service.py
services/chat_services/: base_chat_service.py  semantic_kernel_chat_service.py
services/context_services/: base_context_service.py  langchain_context_service.py
services/story_services/: __init__.py  langchain_service.py  langgraph_service.py  semantic_kernel_service.py
static/: context.html  cost.html  debug.html  index.html  logs.css  script.js  style.css
test/: README.md  test_enhanced_logging.py  test_mcp_client.py  test_mcp_working.py  test_rate_limiting.py  test_retry_functionality.py  test_retry_simple.py
tests/: README.md  __init__.py  conftest.py  test_infrastructure.py  test_prompts.py  test_validation.py
tests/api/: __init__.py  test_chat_routes.py  test_context_routes.py  test_cost_routes.py  test_log_routes.py  test_story_routes.py
tests/database/: __init__.py
tests/e2e/: __init__.py  test_complete_workflows.py
tests/fixtures/: __init__.py  ai_mocks.py  api_client.py  database.py  sample_data.py
tests/integration/: __init__.py  test_database_integration.py  test_story_workflow.py
tests/unit/: __init__.py  test_config.py  test_infrastructure.py  test_models.py
tests/unit/services/: test_base_ai_service.py  test_content_generation_service.py  test_langchain_service.py
